// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot: 0 1`] = `"0 (c = 0)"`;

exports[`snapshot: 1 1`] = `
"1 (c = 10)
--0 (c = 0)"
`;

exports[`snapshot: 2 1`] = `
"2 (c = 20)
--0 (c = 0)
--1 (c = 10)
----0 (c = 0)"
`;

exports[`snapshot: 3 1`] = `
"3 (c = 30)
--0 (c = 0)
--1 (c = 10)
----0 (c = 0)
--2 (c = 20)
----0 (c = 0)
----1 (c = 10)
------0 (c = 0)"
`;

exports[`snapshot: 4 1`] = `
"4 (c = 40)
--0 (c = 0)
--2 (c = 20)
----0 (c = 0)
----1 (c = 10)
------0 (c = 0)
--3 (c = 30)
----0 (c = 0)
----1 (c = 10)
------0 (c = 0)
----2 (c = 20)
------0 (c = 0)
------1 (c = 10)
--------0 (c = 0)"
`;

exports[`snapshot: 5 1`] = `
"5 (c = 50)
--0 (c = 0)
--2 (c = 20)
----0 (c = 0)
----1 (c = 10)
------0 (c = 0)
--3 (c = 30)
----0 (c = 0)
----1 (c = 10)
------0 (c = 0)
----2 (c = 20)
------0 (c = 0)
------1 (c = 10)
--------0 (c = 0)
--4 (c = 40)
----0 (c = 0)
----2 (c = 20)
------0 (c = 0)
------1 (c = 10)
--------0 (c = 0)
----3 (c = 30)
------0 (c = 0)
------1 (c = 10)
--------0 (c = 0)
------2 (c = 20)
--------0 (c = 0)
--------1 (c = 10)
----------0 (c = 0)"
`;

exports[`snapshot: 6 1`] = `
"6 (c = 60)
--0 (c = 0)
--3 (c = 30)
----0 (c = 0)
----1 (c = 10)
------0 (c = 0)
----2 (c = 20)
------0 (c = 0)
------1 (c = 10)
--------0 (c = 0)
--4 (c = 40)
----0 (c = 0)
----2 (c = 20)
------0 (c = 0)
------1 (c = 10)
--------0 (c = 0)
----3 (c = 30)
------0 (c = 0)
------1 (c = 10)
--------0 (c = 0)
------2 (c = 20)
--------0 (c = 0)
--------1 (c = 10)
----------0 (c = 0)
--5 (c = 50)
----0 (c = 0)
----2 (c = 20)
------0 (c = 0)
------1 (c = 10)
--------0 (c = 0)
----3 (c = 30)
------0 (c = 0)
------1 (c = 10)
--------0 (c = 0)
------2 (c = 20)
--------0 (c = 0)
--------1 (c = 10)
----------0 (c = 0)
----4 (c = 40)
------0 (c = 0)
------2 (c = 20)
--------0 (c = 0)
--------1 (c = 10)
----------0 (c = 0)
------3 (c = 30)
--------0 (c = 0)
--------1 (c = 10)
----------0 (c = 0)
--------2 (c = 20)
----------0 (c = 0)
----------1 (c = 10)
------------0 (c = 0)"
`;

exports[`snapshot: 7 1`] = `
"7 (c = 70)
--0 (c = 0)
--3 (c = 30)
----0 (c = 0)
----1 (c = 10)
------0 (c = 0)
----2 (c = 20)
------0 (c = 0)
------1 (c = 10)
--------0 (c = 0)
--5 (c = 50)
----0 (c = 0)
----2 (c = 20)
------0 (c = 0)
------1 (c = 10)
--------0 (c = 0)
----3 (c = 30)
------0 (c = 0)
------1 (c = 10)
--------0 (c = 0)
------2 (c = 20)
--------0 (c = 0)
--------1 (c = 10)
----------0 (c = 0)
----4 (c = 40)
------0 (c = 0)
------2 (c = 20)
--------0 (c = 0)
--------1 (c = 10)
----------0 (c = 0)
------3 (c = 30)
--------0 (c = 0)
--------1 (c = 10)
----------0 (c = 0)
--------2 (c = 20)
----------0 (c = 0)
----------1 (c = 10)
------------0 (c = 0)
--6 (c = 60)
----0 (c = 0)
----3 (c = 30)
------0 (c = 0)
------1 (c = 10)
--------0 (c = 0)
------2 (c = 20)
--------0 (c = 0)
--------1 (c = 10)
----------0 (c = 0)
----4 (c = 40)
------0 (c = 0)
------2 (c = 20)
--------0 (c = 0)
--------1 (c = 10)
----------0 (c = 0)
------3 (c = 30)
--------0 (c = 0)
--------1 (c = 10)
----------0 (c = 0)
--------2 (c = 20)
----------0 (c = 0)
----------1 (c = 10)
------------0 (c = 0)
----5 (c = 50)
------0 (c = 0)
------2 (c = 20)
--------0 (c = 0)
--------1 (c = 10)
----------0 (c = 0)
------3 (c = 30)
--------0 (c = 0)
--------1 (c = 10)
----------0 (c = 0)
--------2 (c = 20)
----------0 (c = 0)
----------1 (c = 10)
------------0 (c = 0)
------4 (c = 40)
--------0 (c = 0)
--------2 (c = 20)
----------0 (c = 0)
----------1 (c = 10)
------------0 (c = 0)
--------3 (c = 30)
----------0 (c = 0)
----------1 (c = 10)
------------0 (c = 0)
----------2 (c = 20)
------------0 (c = 0)
------------1 (c = 10)
--------------0 (c = 0)"
`;

exports[`snapshot: 8 1`] = `
"8 (c = 80)
--0 (c = 0)
--4 (c = 40)
----0 (c = 0)
----2 (c = 20)
------0 (c = 0)
------1 (c = 10)
--------0 (c = 0)
----3 (c = 30)
------0 (c = 0)
------1 (c = 10)
--------0 (c = 0)
------2 (c = 20)
--------0 (c = 0)
--------1 (c = 10)
----------0 (c = 0)
--6 (c = 60)
----0 (c = 0)
----3 (c = 30)
------0 (c = 0)
------1 (c = 10)
--------0 (c = 0)
------2 (c = 20)
--------0 (c = 0)
--------1 (c = 10)
----------0 (c = 0)
----4 (c = 40)
------0 (c = 0)
------2 (c = 20)
--------0 (c = 0)
--------1 (c = 10)
----------0 (c = 0)
------3 (c = 30)
--------0 (c = 0)
--------1 (c = 10)
----------0 (c = 0)
--------2 (c = 20)
----------0 (c = 0)
----------1 (c = 10)
------------0 (c = 0)
----5 (c = 50)
------0 (c = 0)
------2 (c = 20)
--------0 (c = 0)
--------1 (c = 10)
----------0 (c = 0)
------3 (c = 30)
--------0 (c = 0)
--------1 (c = 10)
----------0 (c = 0)
--------2 (c = 20)
----------0 (c = 0)
----------1 (c = 10)
------------0 (c = 0)
------4 (c = 40)
--------0 (c = 0)
--------2 (c = 20)
----------0 (c = 0)
----------1 (c = 10)
------------0 (c = 0)
--------3 (c = 30)
----------0 (c = 0)
----------1 (c = 10)
------------0 (c = 0)
----------2 (c = 20)
------------0 (c = 0)
------------1 (c = 10)
--------------0 (c = 0)
--7 (c = 70)
----0 (c = 0)
----3 (c = 30)
------0 (c = 0)
------1 (c = 10)
--------0 (c = 0)
------2 (c = 20)
--------0 (c = 0)
--------1 (c = 10)
----------0 (c = 0)
----5 (c = 50)
------0 (c = 0)
------2 (c = 20)
--------0 (c = 0)
--------1 (c = 10)
----------0 (c = 0)
------3 (c = 30)
--------0 (c = 0)
--------1 (c = 10)
----------0 (c = 0)
--------2 (c = 20)
----------0 (c = 0)
----------1 (c = 10)
------------0 (c = 0)
------4 (c = 40)
--------0 (c = 0)
--------2 (c = 20)
----------0 (c = 0)
----------1 (c = 10)
------------0 (c = 0)
--------3 (c = 30)
----------0 (c = 0)"
`;

exports[`snapshot: 9 1`] = `
"9 (c = 90)
--0 (c = 0)
--4 (c = 40)
----0 (c = 0)
----2 (c = 20)
------0 (c = 0)
------1 (c = 10)
--------0 (c = 0)
----3 (c = 30)
------0 (c = 0)
------1 (c = 10)
--------0 (c = 0)
------2 (c = 20)
--------0 (c = 0)
--------1 (c = 10)
----------0 (c = 0)
--6 (c = 60)
----0 (c = 0)
----3 (c = 30)
------0 (c = 0)
------1 (c = 10)
--------0 (c = 0)
------2 (c = 20)
--------0 (c = 0)
--------1 (c = 10)
----------0 (c = 0)
----4 (c = 40)
------0 (c = 0)
------2 (c = 20)
--------0 (c = 0)
--------1 (c = 10)
----------0 (c = 0)
------3 (c = 30)
--------0 (c = 0)
--------1 (c = 10)
----------0 (c = 0)
--------2 (c = 20)
----------0 (c = 0)
----------1 (c = 10)
------------0 (c = 0)
----5 (c = 50)
------0 (c = 0)
------2 (c = 20)
--------0 (c = 0)
--------1 (c = 10)
----------0 (c = 0)
------3 (c = 30)
--------0 (c = 0)
--------1 (c = 10)
----------0 (c = 0)
--------2 (c = 20)
----------0 (c = 0)
----------1 (c = 10)
------------0 (c = 0)
------4 (c = 40)
--------0 (c = 0)
--------2 (c = 20)
----------0 (c = 0)
----------1 (c = 10)
------------0 (c = 0)
--------3 (c = 30)
----------0 (c = 0)
----------1 (c = 10)
------------0 (c = 0)
----------2 (c = 20)
------------0 (c = 0)
------------1 (c = 10)
--------------0 (c = 0)
--7 (c = 70)
----0 (c = 0)
----3 (c = 30)
------0 (c = 0)
------1 (c = 10)
--------0 (c = 0)
------2 (c = 20)
--------0 (c = 0)
--------1 (c = 10)
----------0 (c = 0)
----5 (c = 50)
------0 (c = 0)
------2 (c = 20)
--------0 (c = 0)
--------1 (c = 10)
----------0 (c = 0)
------3 (c = 30)
--------0 (c = 0)
--------1 (c = 10)
----------0 (c = 0)
--------2 (c = 20)
----------0 (c = 0)
----------1 (c = 10)
------------0 (c = 0)
------4 (c = 40)
--------0 (c = 0)
--------2 (c = 20)
----------0 (c = 0)
----------1 (c = 10)
------------0 (c = 0)
--------3 (c = 30)
----------0 (c = 0)"
`;

exports[`snapshot: 10 1`] = `
"10 (c = 100)
--0 (c = 0)
--5 (c = 50)
----0 (c = 0)
----2 (c = 20)
------0 (c = 0)
------1 (c = 10)
--------0 (c = 0)
----3 (c = 30)
------0 (c = 0)
------1 (c = 10)
--------0 (c = 0)
------2 (c = 20)
--------0 (c = 0)
--------1 (c = 10)
----------0 (c = 0)
----4 (c = 40)
------0 (c = 0)
------2 (c = 20)
--------0 (c = 0)
--------1 (c = 10)
----------0 (c = 0)
------3 (c = 30)
--------0 (c = 0)
--------1 (c = 10)
----------0 (c = 0)
--------2 (c = 20)
----------0 (c = 0)
----------1 (c = 10)
------------0 (c = 0)
--7 (c = 70)
----0 (c = 0)
----3 (c = 30)
------0 (c = 0)
------1 (c = 10)
--------0 (c = 0)
------2 (c = 20)
--------0 (c = 0)
--------1 (c = 10)
----------0 (c = 0)
----5 (c = 50)
------0 (c = 0)
------2 (c = 20)
--------0 (c = 0)
--------1 (c = 10)
----------0 (c = 0)
------3 (c = 30)
--------0 (c = 0)
--------1 (c = 10)
----------0 (c = 0)
--------2 (c = 20)
----------0 (c = 0)
----------1 (c = 10)
------------0 (c = 0)
------4 (c = 40)
--------0 (c = 0)
--------2 (c = 20)
----------0 (c = 0)
----------1 (c = 10)
------------0 (c = 0)
--------3 (c = 30)
----------0 (c = 0)
----------1 (c = 10)
------------0 (c = 0)
----------2 (c = 20)
------------0 (c = 0)
------------1 (c = 10)
--------------0 (c = 0)
----6 (c = 60)
------0 (c = 0)
------3 (c = 30)
--------0 (c = 0)
--------1 (c = 10)
----------0 (c = 0)
--------2 (c = 20)
----------0 (c = 0)
----------1 (c = 10)
------------0 (c = 0)
------4 (c = 40)
--------0 (c = 0)
--------2 (c = 20)
----------0 (c = 0)
----------1 (c = 10)
------------0 (c = 0)
--------3 (c = 30)
----------0 (c = 0)
----------1 (c = 10)
------------0 (c = 0)
----------2 (c = 20)
------------0 (c = 0)
------------1 (c = 10)
--------------0 (c = 0)
------5 (c = 50)
--------0 (c = 0)
--------2 (c = 20)
----------0 (c = 0)
----------1 (c = 10)
------------0 (c = 0)
--------3 (c = 30)
----------0 (c = 0)"
`;
